[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["commonware"]
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/constantinople"
keywords = ["configuration", "traits", "generics"]
categories = []
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "crates/application",
  "crates/engine",
  "crates/indexer",
  "crates/mempool",
  "crates/primitives",
  "bin/deploy",
  "bin/spammer",
  "bin/validator",
]

[workspace.lints.rust]
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
large_futures = "warn"

[workspace.dependencies]
# Workspace
constantinople-engine = { path = "crates/engine" }
constantinople-indexer = { path = "crates/indexer" }
constantinople-mempool = { path = "crates/mempool" }
constantinople-primitives = { path = "crates/primitives" }
constantinople-application = { path = "crates/application" }

# Commonware
commonware-actor = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-glue = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-math = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-formatting = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-coding = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-deployer = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-parallel = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "dc1a3dfc159caa89e0cbcd21ae995bf48a54f23a", default-features = false }

# Exoware
exoware-sdk = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-server = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-qmdb = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-simplex = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-simulator = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-sql = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
datafusion = "52"

# Other
axum = "0.8"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
clap = { version = "4", default-features = false }
rand = { version = "0.8.5", default-features = false }
bytes = { version = "1.11.1", default-features = false }
criterion = "0.7.0"
rayon = "1.10"
serde = { version = "1.0.228", default-features = false }
tokio = { version = "1.50", default-features = false }
tower = { version = "0.5", default-features = false }
rstest = "0.26.0"
futures = { version = "0.3.31", default-features = false }
tracing = { version = "0.1.41", default-features = false }
arbitrary = { version = "1.4.2", features = ["derive"] }
ahash = "0.8.12"
rand_core = "0.6.4"
reqwest = { version = "0.12", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde_yaml = "0.9"
derive_more = { version = "2.1.1", default-features = false }
prometheus-client = { version = "0.24.0", default-features = false }
tracing-subscriber = "0.3"

[profile.samply]
inherits = "release"
debug = true
