[package]
name = "constantinople-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Workspace
constantinople-mempool.workspace = true
constantinople-primitives.workspace = true

# Commonware
commonware-glue.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-privacy.workspace = true

# Other
rand.workspace = true
bytes.workspace = true
futures = { workspace = true, features = ["executor"] }
tracing.workspace = true
rand_core.workspace = true
prometheus-client.workspace = true
hashbrown = { workspace = true, features = ["default-hasher"] }

[dev-dependencies]
# Workspace
constantinople-mempool = { workspace = true, features = ["mocks"] }

# Commonware
commonware-math.workspace = true
commonware-runtime.workspace = true
commonware-parallel.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }

# Other
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "executor"
harness = false
