[package]
name = "constantinople-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Workspace
constantinople-mempool.workspace = true
constantinople-primitives.workspace = true

# Commonware
commonware-glue.workspace = true
commonware-codec.workspace = true
commonware-macros.workspace = true
commonware-utils.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }

# Other
rand.workspace = true
bytes.workspace = true
futures = { workspace = true, features = ["executor"] }
tracing.workspace = true
prometheus-client.workspace = true
ahash.workspace = true

[dev-dependencies]
# Workspace
constantinople-mempool = { workspace = true, features = ["mocks"] }

# Commonware
commonware-actor.workspace = true
commonware-math.workspace = true
commonware-runtime.workspace = true
commonware-parallel.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }

# Other
rand.workspace = true
criterion.workspace = true
mimalloc.workspace = true

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "compute"
harness = false

[[bench]]
name = "selective"
harness = false

[[bench]]
name = "finalize"
harness = false
