[package]
name = "constantinople-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
test-utils = [ "commonware-glue/test-utils", "constantinople-mempool/mocks" ]

[dependencies]
# Workspace
constantinople-mempool.workspace = true
constantinople-primitives.workspace = true
constantinople-application.workspace = true

# Commonware
commonware-actor.workspace = true
commonware-p2p.workspace = true
commonware-glue.workspace = true
commonware-math.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-coding.workspace = true
commonware-macros.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-parallel.workspace = true
commonware-resolver.workspace = true
commonware-broadcast.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }

# Other
rand.workspace = true
bytes.workspace = true
futures.workspace = true
tracing.workspace = true
rand_core.workspace = true
thiserror.workspace = true
prometheus-client.workspace = true

[dev-dependencies]
# Workspace
constantinople-mempool = { workspace = true, features = ["mocks"] }

# Commonware
commonware-glue = { workspace = true, features = ["test-utils"] }
commonware-math.workspace = true
commonware-runtime.workspace = true
commonware-parallel.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }

# Other
tracing-subscriber.workspace = true
