[package]
name = "constantinople-explorer-crypto"
description = "WASM crypto bindings for the Constantinople explorer"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
commonware-codec.workspace = true
commonware-cryptography.workspace = true
wasm-bindgen = "0.2.118"
