[package]
name = "constantinople-explorer-crypto"
description = "WASM crypto bindings for the Constantinople explorer"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-parallel.workspace = true
commonware-storage.workspace = true
constantinople-primitives.workspace = true
js-sys = "0.3.82"
rand = { workspace = true, features = ["std_rng"] }
wasm-bindgen = "0.2.118"
