[package]
name = "constantinople-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Workspace
constantinople-engine.workspace = true
constantinople-primitives.workspace = true

# Commonware
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true

# Exoware
exoware-sdk.workspace = true

# Other
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
commonware-coding.workspace = true
commonware-math.workspace = true
exoware-simulator.workspace = true
rand.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
