[package]
name = "constantinople-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Workspace
constantinople-application.workspace = true
constantinople-engine.workspace = true
constantinople-primitives.workspace = true

# Commonware
commonware-actor.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-deployer.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-utils.workspace = true

# Exoware
exoware-qmdb.workspace = true
exoware-sdk.workspace = true
exoware-simulator.workspace = true
exoware-sql.workspace = true

# Datafusion (re-exposed by exoware-sql; needed to declare column types).
datafusion.workspace = true

# Other
axum.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "std"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
commonware-coding.workspace = true
commonware-math.workspace = true
criterion.workspace = true
rand.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "chain-indexer"
path = "src/main.rs"

[[bin]]
name = "metadata-indexer"
path = "src/bin/sql.rs"

[[bin]]
name = "qmdb-indexer"
path = "src/bin/qmdb.rs"

[lib]
name = "constantinople_indexer"
path = "src/lib.rs"

[[bench]]
name = "publisher"
harness = false
