[package]
name = "constantinople-primitives"
description = "Types for constantinople"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Commonware
commonware-math.workspace = true
commonware-codec.workspace = true
commonware-formatting.workspace = true
commonware-utils.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std", "sha2-asm"] }

# Privacy (ZK-Pari private transfers)
zkpari.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-relations.workspace = true

# Other
bytes.workspace = true
p256.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand_core.workspace = true
derive_more = { workspace = true, features = ["full"] }
serde_json.workspace = true

[dev-dependencies]
# Commonware
commonware-math = { workspace = true, features = ["arbitrary"] }
commonware-codec = { workspace = true, features = ["arbitrary"] }
commonware-utils = { workspace = true, features = ["arbitrary"] }
commonware-consensus = { workspace = true, features = ["arbitrary"] }
commonware-cryptography = { workspace = true, features = ["arbitrary"] }

# Other
rand.workspace = true
arbitrary = { workspace = true, features = ["derive"] }

[features]
arbitrary = [
	"commonware-codec/arbitrary",
	"commonware-consensus/arbitrary",
	"commonware-cryptography/arbitrary",
	"commonware-math/arbitrary",
	"commonware-utils/arbitrary",
	"dep:arbitrary",
]
