[package]
name = "constantinople-primitives"
description = "Types for constantinople"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Commonware
commonware-math.workspace = true
commonware-codec.workspace = true
commonware-formatting.workspace = true
commonware-utils.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-runtime.workspace = true
commonware-privacy.workspace = true

# Other
ark-bn254 = { workspace = true, optional = true }
bytes.workspace = true
p256.workspace = true
tracing.workspace = true
rand.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }
derive_more = { workspace = true, features = ["full"] }
serde_json.workspace = true

[dev-dependencies]
# Commonware
commonware-math = { workspace = true, features = ["arbitrary"] }
commonware-codec = { workspace = true, features = ["arbitrary"] }
commonware-utils = { workspace = true, features = ["arbitrary"] }
commonware-consensus = { workspace = true, features = ["arbitrary"] }
commonware-cryptography = { workspace = true, features = ["arbitrary"] }

# Other
rand = { workspace = true, features = ["std_rng"] }
arbitrary = { workspace = true, features = ["derive"] }

[features]
default = ["privacy-backend-mock"]
arbitrary = [
	"commonware-codec/arbitrary",
	"commonware-consensus/arbitrary",
	"commonware-cryptography/arbitrary",
	"commonware-math/arbitrary",
	"commonware-utils/arbitrary",
	"dep:arbitrary",
]
privacy-backend-mock = [
	"commonware-privacy/codec",
	"commonware-privacy/mocks",
]
privacy-backend-zkpari = [
	"commonware-privacy/codec",
	"commonware-privacy/zkpari",
	"dep:ark-bn254",
]
privacy-backend-simulator = [
	"commonware-privacy/simulator",
]
