[package]
name = "constantinople-primitives"
description = "Types for constantinople"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Commonware
commonware-math.workspace = true
commonware-codec.workspace = true
commonware-formatting.workspace = true
commonware-utils.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-runtime.workspace = true
commonware-privacy.workspace = true

# Other
ark-bn254 = { workspace = true, optional = true }
bytes.workspace = true
p256.workspace = true
tracing.workspace = true
rand.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }
derive_more = { workspace = true, features = ["full"] }
serde_json.workspace = true

[dev-dependencies]
# Commonware
commonware-math = { workspace = true, features = ["arbitrary"] }
commonware-codec = { workspace = true, features = ["arbitrary"] }
commonware-utils = { workspace = true, features = ["arbitrary"] }
commonware-consensus = { workspace = true, features = ["arbitrary"] }
commonware-cryptography = { workspace = true, features = ["arbitrary"] }

# Other
rand = { workspace = true, features = ["std_rng"] }
arbitrary = { workspace = true, features = ["derive"] }

[features]
default = ["privacy-backend-mock"]
arbitrary = [
	"commonware-codec/arbitrary",
	"commonware-consensus/arbitrary",
	"commonware-cryptography/arbitrary",
	"commonware-math/arbitrary",
	"commonware-utils/arbitrary",
	"dep:arbitrary",
]
# Private-payment backend selection is workspace-global: enabling a feature
# here switches ChainPrivatePaymentBackend for every dependent crate via
# cargo feature unification. Valid combinations:
#   - privacy-backend-mock (default): zero-size proofs, trivial verification.
#   - privacy-backend-zkpari: real BN254 commitments/range proofs. Coexists
#     with the default mock feature and wins (the type aliases prefer zkpari
#     via not(...) guards), so builds don't need default-features = false.
#   - privacy-backend-simulator: add-on granting trapdoor proof forging for
#     load generation; requires one of the base backends (compile_error!
#     otherwise) and composes with either.
privacy-backend-mock = [
	"commonware-privacy/codec",
	"commonware-privacy/mocks",
]
privacy-backend-zkpari = [
	"commonware-privacy/codec",
	"commonware-privacy/zkpari",
	"dep:ark-bn254",
]
privacy-backend-simulator = [
	"commonware-privacy/simulator",
]
